removed the empty pannel in lattice plot
-it turns out that lattice does not use "drop.unused.levels" argument properly,when conditioning variables is separate by "*" or "+" symbols.

-the solution is to modify the formula passed to qaPlot by using ":" symbol instead. It forms the single factor by dropping the unused levels before passed down to the layout routine of lattice, which means lattice actually plots the data by the single new conditioning variable.

-the conditioning variables to be interacted by ":" have to be coerced to factors. It is currently done within plot method for qaTask.

-apparently, it would be nice to keep the nice layout/strips with "*" as seperator and dropping the unused levels in the future. But step debug and modification of lattice::plot.trellis function is needed.

Closes #3

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,18 @@ Description: Provides quality control and quality assessment tools for flow
              cytometry data. 
 Depends: R (>= 2.14.0),flowWorkspace,MASS
 Imports: flowStats,MASS,ncdfFlow,RColorBrewer,hwriter,reshape,RSVGTipsDevice
-Collate:AllGeneric.R AllClasses.R  AllFunctions.R  outlier.R  qaPanelFunction.R trellisPlot.R qaCheck.R qaPlot.R qaTask-accessor-Methods.R getBoundary.R getQAStats.R 
+Collate:AllGeneric.R 
+		AllClasses.R  
+		AllFunctions.R  
+		outlier.R  
+		qaPanelFunction.R 
+		trellisPlot.R 
+		qaCheck.R 
+		qaPlot.R 
+		qaTask-accessor-Methods.R 
+		getBoundary.R 
+		getQAStats.R
+		utils.R 
 License: Artistic-2.0
 biocViews:  Infrastructure, Flowcytometry, CellBasedAssays
 
