fix some bugs and enhancements
- export the rlm from MASS and move MASS back to import list from dependency list
- fix the plotAll argument bug
- fix the imageDir path in qaReport
- update the vignette
- add the detection of parallel package and number of cpus in getQAStats method

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Description: Provides quality control and quality assessment tools for flow
              cytometry data. 
-Depends: R (>= 2.14.0),flowWorkspace,MASS
-Imports: flowStats,MASS,ncdfFlow,RColorBrewer,hwriter,reshape,RSVGTipsDevice
+Depends: R (>= 2.14.0),flowWorkspace,reshape
+Imports: flowStats,MASS,ncdfFlow,RColorBrewer,hwriter,RSVGTipsDevice
 Collate:AllGeneric.R 
 		AllClasses.R  
 		AllFunctions.R  
