--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,10 @@ import(ncdfFlow)
 importFrom(RSVGTipsDevice,devSVGTips,setSVGShapeToolTip,setSVGShapeURL)
 importFrom(hwriter,openPage,hwrite,closePage)
 importFrom(MASS,rlm,huber)
-
+importFrom(flowCore,colnames)
+import(flowViz)
+importFrom(zoo,as.yearmon)
+importFrom(DBI,dbDisconnect,dbDriver,dbConnect)
 	
 exportClasses(qaTask)
 
