--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.99.1
 Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Depends: R (>= 2.14.0),flowWorkspace,reshape
-Imports: methods,flowStats,MASS,ncdfFlow,RColorBrewer,hwriter,RSVGTipsDevice,flowCore,flowViz,zoo,lattice,DBI
+Imports: methods,flowStats,MASS,ncdfFlow,RColorBrewer,hwriter,RSVGTipsDevice,flowCore,flowViz,zoo,lattice
 Collate: AllGeneric.R 
 		AllClasses.R  
 		AllFunctions.R  
