qaReport method for qaTask and a list of qaTasks are added and update the vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Collate: AllGeneric.R
 		qaTask-accessor-Methods.R 
 		getBoundary.R 
 		getQAStats.R
+		qaReport.R
 		utils.R 
 Description: Provides quality control and quality assessment tools for gated flow cytometry data. 
 License: Artistic-2.0
