fix some issues in viz and add par slot to qaTask
- use unit(1,strwidth,...) to draw rect in order to fit the background with the label in gates properly
- add par slot to qaTask class in order to allow the lattice arguments passed in task-specific way

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,4 +23,4 @@ export(	"queryStats"
 		)
 
 
-exportMethods("plot","qaCheck","getQAStats","qaReport")              
+exportMethods("plot","qaCheck","getQAStats","qaReport","qpar","qpar<-")              
