--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Title: Qualitiy Control of Gated Flow Cytometry Experiments
 Version: 0.99.1
 Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
-Depends: R (>= 2.14.0),flowWorkspace,reshape
-Imports: methods,flowStats,MASS,ncdfFlow,RColorBrewer,hwriter,RSVGTipsDevice,flowCore,flowViz,zoo,lattice
+Depends: R (>= 2.14.0)
+Imports: methods,flowStats,MASS,ncdfFlow,RColorBrewer,hwriter,RSVGTipsDevice,flowCore,flowViz,zoo,lattice,flowWorkspace,reshape
 Collate: AllGeneric.R 
 		AllClasses.R  
 		AllFunctions.R  
