--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@ importFrom(RSVGTipsDevice,devSVGTips,setSVGShapeToolTip,setSVGShapeURL)
 importFrom(hwriter,openPage,hwrite,closePage)
 importFrom(MASS,rlm,huber)
 importFrom(graphics,plot)
-importFrom(flowCore,colnames,pData)
+importFrom(flowCore,colnames)
 #importMethodsFrom(XML, xmlParse, xmlRoot, xmlNode,addChildren,xmlCDataNode,replaceNodes,saveXML)
 import(flowViz)
 #import(flowWorkspace)
