update Rd files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,9 @@ importFrom(RSVGTipsDevice,devSVGTips,setSVGShapeToolTip,setSVGShapeURL)
 importFrom(hwriter,openPage,hwrite,closePage)
 importFrom(MASS,rlm,huber)
 importFrom(graphics,plot)
-importFrom(flowCore,colnames)
+#importFrom(flowCore,colnames)
 #importMethodsFrom(XML, xmlParse, xmlRoot, xmlNode,addChildren,xmlCDataNode,replaceNodes,saveXML)
-import(flowViz)
+#import(flowViz)
 #import(flowWorkspace)
 #importFrom(zoo,as.yearmon)
 #importFrom(reshape,cast,melt)
