--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,15 +1,7 @@
-import(ncdfFlow)
+#import(ncdfFlow)
 importFrom(RSVGTipsDevice,devSVGTips,setSVGShapeToolTip,setSVGShapeURL)
 importFrom(hwriter,openPage,hwrite,closePage)
 importFrom(MASS,rlm,huber)
-importFrom(graphics,plot)
-#importFrom(flowCore,colnames)
-#importMethodsFrom(XML, xmlParse, xmlRoot, xmlNode,addChildren,xmlCDataNode,replaceNodes,saveXML)
-#import(flowViz)
-#import(flowWorkspace)
-#importFrom(zoo,as.yearmon)
-#importFrom(reshape,cast,melt)
-importFrom(Biobase,description)
 	
 exportClasses(qaTask)
 
