--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-import(ncdfFlow)
+#import(ncdfFlow)
 importFrom(RSVGTipsDevice,devSVGTips,setSVGShapeToolTip,setSVGShapeURL)
 importFrom(hwriter,openPage,hwrite,closePage)
 importFrom(MASS,rlm,huber)
