--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.99.1
 Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Depends: R (>= 2.14.0),flowWorkspace,reshape
-Imports: MASS,hwriter,RSVGTipsDevice
+Imports: MASS,hwriter,RSVGTipsDevice,lattice,flowCore,flowViz
 Enhances:ncdfFlow
 Collate: AllGeneric.R 
 		AllClasses.R  
