--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,9 @@ Title: Qualitiy Control of Gated Flow Cytometry Experiments
 Version: 0.99.1
 Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
-Depends: R (>= 2.14.0),reshape
-Imports: BiocGenerics, IDPmisc, MASS, RBGL, RSVGTipsDevice, XML,
-         flowCore, flowViz, flowWorkspace, grDevices, graphics, grid,
-         hwriter, lattice, methods, stats, utils,plyr,stats4
-#Imports: MASS,hwriter,RSVGTipsDevice,lattice,flowCore,flowViz,methods
+Depends: R (>= 2.14.0),reshape,flowWorkspace,
+#Imports:  MASS,RSVGTipsDevice,grDevices, grid, hwriter, lattice, stats, utils,plyr,stats4
+Imports: MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz
 Enhances:ncdfFlow
 Collate: AllGenerics.R 
 		AllClasses.R  
@@ -26,4 +24,5 @@ Collate: AllGenerics.R
 Description: Provides quality control and quality assessment tools for gated flow cytometry data. 
 License: Artistic-2.0
 biocViews:  Infrastructure, Flowcytometry, CellBasedAssays
+
 
