replace multicore with snowfall in vignette and add methods import to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Depends: R (>= 2.14.0),reshape,flowWorkspace,
 #Imports:  MASS,RSVGTipsDevice,grDevices, grid, hwriter, lattice, stats, utils,plyr,stats4
-Imports: MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz
+Imports: MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods
 Enhances:ncdfFlow
 Collate: AllGenerics.R 
 		AllClasses.R  
