add scatterPar to control the individual plot,but strange behavior occured again that disable the debugging method by loading the definition. It may be caused by the new changes of R or BioC base packages. #issue 12

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Collate: AllGenerics.R
 		qaTask-accessor-Methods.R 
 		getBoundary.R 
 		getQAStats.R
+		addStats.R
 		qaReport.R
 		utils.R 
 Description: Provides quality control and quality assessment tools for gated flow cytometry data. 
