1.add wrapper 'QUALIFIER' to run saveToDB,getQAStats,makeQaTask in one call 2.add fcs.colname argument to saveToDB to specify FCS filename column

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ importFrom(hwriter, closePage, hwrite, openPage)
 
 exportClasses(qaTask)
 
-export( "saveToDB"
+export( "saveToDB",QUALIFIER
                 ,"makeQaTask"
                 ,"proportion.outliers.robust"
                 ,"proportion.outliers.mle"
