--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ importFrom(hwriter, closePage, hwrite, openPage)
 
 exportClasses(qaTask)
 
-export( "saveToDB",QUALIFIER
+export( "saveToDB",qaPreprocess
                 ,"makeQaTask"
                 ,"proportion.outliers.robust"
                 ,"proportion.outliers.mle"
