pass ... as it is to lattice in qaPlot close #20

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export( "saveToDB",qaPreprocess
                 ,"outlier.t"
                 ,"outlier.norm"
                 ,rlm
+                ,initDB
                 )
 
 
