--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,13 +8,11 @@ importFrom(RSVGTipsDevice, devSVGTips, setSVGShapeToolTip,
 
 importFrom(hwriter, closePage, hwrite, openPage)
 
-
-#importFrom(plyr, is.formula)
-
 exportClasses(qaTask)
 
 export( "saveToDB",qaPreprocess
                 ,"makeQaTask"
+                ,"read.qaTask"
                 ,"proportion.outliers.robust"
                 ,"proportion.outliers.mle"
                 ,"qoutlier"
@@ -23,8 +21,15 @@ export( "saveToDB",qaPreprocess
                 ,"outlier.norm"
                 ,rlm
                 ,initDB
+                ,"clearCheck"
                 )
 
 
-exportMethods("plot","qaCheck","getQAStats","qaReport","qpar","qpar<-")          
+exportMethods("plot","qaCheck","getQAStats","queryStats"
+			,"qaReport"
+			,"qpar","qpar<-"
+			,"scatterPar","scatterPar<-"
+			,"rFunc","rFunc<-"
+			,"htmlReport","htmlReport<-"
+			)          
 
