--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Title: Qualitiy Control of Gated Flow Cytometry Experiments
 Version: 1.1.2
 Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
-Depends: R (>= 2.14.0),
-Imports: MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,reshape,flowWorkspace
+Depends: R (>= 2.14.0),reshape,flowWorkspace,flowViz,flowCore
+Imports: MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,reshape
 Enhances:ncdfFlow
 Collate: AllGenerics.R 
 		AllClasses.R  
