finish batch scripts for saving QA info to labkey

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,8 +29,13 @@ export( qaPreprocess
         ,rlm
         ,initDB
         ,loadDB
-        ,dumpDB
+        ,loadStats
+        ,writeTask
+        ,writeGStbl
+        ,writeStats
+        ,writeQAResults
         ,"clearCheck"
+        
         )
 
 
