--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: QUALIFIER 
 Type: Package
 Title: Qualitiy Control of Gated Flow Cytometry Experiments
-Version: 1.1.3
+Version: 1.3.2
 Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
-Depends: R (>= 2.14.0),reshape,flowWorkspace,flowViz,flowCore
+Depends: R (>= 2.14.0),reshape,flowWorkspace,flowViz,flowCore,RColorBrewer
 Imports: MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,reshape
 Enhances:ncdfFlow
 Collate: AllGenerics.R 
