Minor fix to the NAMESPACE file: methods that are assignments must be enclosed in quote marks, otherwise R CMD INSTALL fails

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,9 +39,9 @@ export( qaPreprocess
 
 exportMethods(plot,qaCheck,getQAStats,queryStats
 			,qaReport
-			,qpar,qpar<-
-			,scatterPar,scatterPar<-
-			,rFunc,rFunc<-
-			,htmlReport,htmlReport<-
+			,qpar,'qpar<-'
+			,scatterPar,'scatterPar<-'
+			,rFunc,'rFunc<-'
+			,htmlReport,'htmlReport<-'
 			)          
 
