Made Rlabkey a dependency of QUALIFIER's labkey branch

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,9 @@ Title: Quality Control of Gated Flow Cytometry Experiments
 Version: 1.3.4
 Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
-Depends: R (>= 2.14.0),reshape,flowWorkspace,flowViz,flowCore,RColorBrewer
+Depends: R (>= 2.14.0),reshape,flowWorkspace,flowViz,flowCore,RColorBrewer,Rlabkey
 Imports: MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,reshape
-Enhances:ncdfFlow
+Enhances: ncdfFlow
 Collate: AllGenerics.R 
 		AllClasses.R  
 		AllFunctions.R  
