--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,9 @@ Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Depends:
     R (>= 2.14.0),flowCore,flowViz,ncdfFlow,flowWorkspace (>= 3.7.27),
-    data.table,grDevices
+    data.table
 Imports:
-    MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,reshape,latticeExtra
+    MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,reshape,latticeExtra,grDevices
 Collate:
     'AllGenerics.R'
     'AllClasses.R'
@@ -24,6 +24,7 @@ Collate:
     'qaReport.R'
     'utils.R'
     'zzz.R'
+    'data.R'
 Description: Provides quality control and quality assessment tools for gated
     flow cytometry data.
 License: Artistic-2.0
