--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ exportMethods(qpar)
 exportMethods(queryStats)
 exportMethods(rFunc)
 exportMethods(scatterPar)
+importFrom(flowWorkspace,lapply)
 importFrom(hwriter,closePage)
 importFrom(hwriter,hwrite)
 importFrom(hwriter,openPage)
