--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,7 @@ Depends:
     R (>= 2.14.0),flowCore,flowViz,ncdfFlow,flowWorkspace (>= 3.7.29),
     data.table
 Imports:
-    MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,reshape,latticeExtra,grDevices,
-    openCyto, tools
+    MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,reshape,latticeExtra,grDevices,tools
 Collate:
     'AllGenerics.R'
     'AllClasses.R'
