--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,10 +32,14 @@ importFrom(latticeExtra,axis.grid)
 importFrom(latticeExtra,ggplot2like)
 importFrom(MASS,huber)
 importFrom(MASS,rlm)
-importFrom(reshape,cast)
-importFrom(reshape,melt)
-importFrom(reshape,rename)
 importFrom(RSVGTipsDevice,devSVGTips)
 importFrom(RSVGTipsDevice,setSVGShapeToolTip)
 importFrom(RSVGTipsDevice,setSVGShapeURL)
 importFrom(stats4,plot)
+importFrom(XML,addChildren)
+importFrom(XML,replaceNodes)
+importFrom(XML,saveXML)
+importFrom(XML,xmlNode)
+importFrom(XML,xmlParse)
+importFrom(XML,xmlRoot)
+importFrom(XML,xmlCDataNode)
