--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,9 @@ Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Depends:
     R (>= 2.14.0),flowCore,flowViz,ncdfFlow,flowWorkspace (>= 3.7.29),
-    data.table
+    data.table,reshape
 Imports:
-    MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,reshape,latticeExtra,grDevices,tools
+    MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,latticeExtra,grDevices,tools
 Collate:
     'AllGenerics.R'
     'AllClasses.R'
