--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 export(clearCheck)
 export(initDB)
+export(load_db)
 export(outlier.cutoff)
 export(outlier.norm)
 export(outlier.t)
@@ -9,6 +10,7 @@ export(qaPreprocess)
 export(qoutlier)
 export(read.qaTask)
 export(rlm)
+export(save_db)
 export(saveToDB)
 exportClasses(qaTask)
 exportMethods("htmlReport<-")
@@ -39,7 +41,7 @@ importFrom(stats4,plot)
 importFrom(XML,addChildren)
 importFrom(XML,replaceNodes)
 importFrom(XML,saveXML)
+importFrom(XML,xmlCDataNode)
 importFrom(XML,xmlNode)
 importFrom(XML,xmlParse)
 importFrom(XML,xmlRoot)
-importFrom(XML,xmlCDataNode)
