--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,9 +39,8 @@ importFrom(RSVGTipsDevice,setSVGShapeToolTip)
 importFrom(RSVGTipsDevice,setSVGShapeURL)
 importFrom(stats4,plot)
 importFrom(XML,addChildren)
-importFrom(XML,replaceNodes)
 importFrom(XML,saveXML)
 importFrom(XML,xmlCDataNode)
 importFrom(XML,xmlNode)
-importFrom(XML,xmlParse)
 importFrom(XML,xmlRoot)
+importFrom(XML,xmlTreeParse)
