add import for Biobase::rowMedian

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ exportMethods(qpar)
 exportMethods(queryStats)
 exportMethods(rFunc)
 exportMethods(scatterPar)
+importFrom(Biobase,rowMedians)
 importFrom(flowWorkspace,lapply)
 importFrom(hwriter,closePage)
 importFrom(hwriter,hwrite)
