fix some qa.Grouplot issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ exportMethods("htmlReport<-")
 exportMethods("qpar<-")
 exportMethods("rFunc<-")
 exportMethods("scatterPar<-")
+exportMethods("highlight<-")
 exportMethods(getQAStats)
 exportMethods(htmlReport)
 exportMethods(plot)
