--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(hwriter,hwrite)
 importFrom(hwriter,openPage)
 importFrom(latticeExtra,axis.grid)
 importFrom(latticeExtra,ggplot2like)
+importFrom(latticeExtra,useOuterStrips)
 importFrom(MASS,huber)
 importFrom(MASS,rlm)
 importFrom(RSVGTipsDevice,devSVGTips)
