--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,9 +40,11 @@ importFrom(RSVGTipsDevice,devSVGTips)
 importFrom(RSVGTipsDevice,setSVGShapeToolTip)
 importFrom(RSVGTipsDevice,setSVGShapeURL)
 importFrom(stats4,plot)
+importFrom(XML,"xmlAttrs<-")
 importFrom(XML,addChildren)
 importFrom(XML,saveXML)
 importFrom(XML,xmlCDataNode)
+importFrom(XML,xmlGetAttr)
 importFrom(XML,xmlNode)
 importFrom(XML,xmlRoot)
 importFrom(XML,xmlTreeParse)
