--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Depends:
     R (>= 2.14.0),flowCore,flowViz,ncdfFlow,flowWorkspace (>= 3.9.37),
     data.table,reshape
 Imports:
-    MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,latticeExtra,grDevices,tools
+    MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,latticeExtra,grDevices,tools, bioBase,XML
 Collate:
     'AllGenerics.R'
     'AllClasses.R'
