--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: QUALIFIER
 Type: Package
 Title: Quality Control of Gated Flow Cytometry Experiments
-Version: 1.5.19
+Version: 1.7.21
 Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Depends:
-    R (>= 2.14.0),flowCore,flowViz,ncdfFlow,flowWorkspace (>= 3.9.37),
+    R (>= 2.14.0),flowCore,flowViz,ncdfFlow,flowWorkspace,
     data.table,reshape
 Imports:
     MASS,hwriter,RSVGTipsDevice,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,latticeExtra,grDevices,tools,
