--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: QUALIFIER
 Type: Package
 Title: Quality Control of Gated Flow Cytometry Experiments
-Version: 1.9.23
+Version: 1.9.24
 Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Depends:
@@ -9,7 +9,7 @@ Depends:
     data.table,reshape
 Imports:
     MASS,hwriter,lattice,stats4,flowCore,flowViz,methods,flowWorkspace,latticeExtra,grDevices,tools,
-    Biobase,XML
+    Biobase,XML,grid
 Description: Provides quality control and quality assessment tools for gated
     flow cytometry data.
 License: Artistic-2.0
