--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: QUALIFIER
 Type: Package
 Title: Quality Control of Gated Flow Cytometry Experiments
-Version: 1.27.0
+Version: 1.27.1
 Author: Mike Jiang,Greg Finak,Raphael Gottardo
 Maintainer: Mike Jiang <wjiang2@fhcrc.org>
 Depends: R (>= 2.14.0),flowCore,flowViz,ncdfFlow,flowWorkspace,
@@ -12,7 +12,7 @@ Imports:
 Description: Provides quality control and quality assessment tools for gated
     flow cytometry data.
 License: Artistic-2.0
-biocViews: Infrastructure, FlowCytometry, CellBasedAssays
+biocViews: ImmunoOncology, Infrastructure, FlowCytometry, CellBasedAssays
 Suggests: RSVGTipsDevice, knitr
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
