--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,4 @@ License: Artistic-2.0
 biocViews: Infrastructure, FlowCytometry, CellBasedAssays
 Suggests: RSVGTipsDevice, knitr
 VignetteBuilder: knitr
+RoxygenNote: 6.1.1
